# HandSignDetection

./: .gitignore  .render.yaml    Dockerfile  README.md  app.py  data.py  pyproject.toml  requirement.txt  requirements.txt  tempCodeRunnerFile.py
model/: keras_model.h5  labels.txt
