[project]
name = "handsigndetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cvzone>=1.6.1",
    "mediapipe>=0.10.14",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python>=4.11.0.86",
    "streamlit>=1.47.0",
    "streamlit-webrtc>=0.63.3",
    "tensorflow>=2.14.0",
]
